--- a/.project
+++ b/.project
@@ -27,7 +27,7 @@
 	<variableList>
 		<variable>
 			<name>TIVAWARE</name>
-			<value>file:/home/rt/ti/SW-TM4C-2.1.4.178</value>
+			<value>file:/C:/ti/TivaWare_C_Series-2.1.4.178</value>
 		</variable>
 	</variableList>
 </projectDescription>
